feat: add approvals API
