# internal/server/api/v1/repos/approval.go
@@ -55,6 +55,24 @@ func (r *Repo) ListApprovals(c *gin.Context) {
 func (r *Repo) GetApproval(c *gin.Context) {
 	ctx := c.Request.Context()
 
+	var (
+		aid = c.Param("aid")
+	)
+
+	ap, err := r.i.FindApprovalByID(ctx, atoi(aid))
+	if ent.IsNotFound(err) {
+		r.log.Warn("The approval is not found.", zap.Error(err))
+		gb.ErrorResponse(c, http.StatusNotFound, "The apporval is not found.")
+		return
+	} else if err != nil {
+		r.log.Error("It has failed to get the approval.", zap.Error(err))
+		gb.ErrorResponse(c, http.StatusInternalServerError, "It has failed to get the approval.")
+		return
+	}
+
+	gb.Response(c, http.StatusOK, ap)
+}
+
 func (r *Repo) GetMyApproval(c *gin.Context) {
 	ctx := c.Request.Context()
 
@@ -211,4 +229,38 @@ func (r *Repo) UpdateApproval(c *gin.Context) {
 	}
 
 	gb.Response(c, http.StatusOK, a)
+}
+
+func (r *Repo) DeleteApproval(c *gin.Context) {
+	ctx := c.Request.Context()
+
+	var (
+		aid = c.Param("aid")
+	)
+
+	p := &approvalPostPayload{}
+	if err := c.ShouldBindBodyWith(p, binding.JSON); err != nil {
+		r.log.Warn("failed to bind the payload.", zap.Error(err))
+		gb.ErrorResponse(c, http.StatusBadRequest, "It has failed to bind the payload.")
+		return
+	}
+
+	ap, err := r.i.FindApprovalByID(ctx, atoi(aid))
+	if ent.IsNotFound(err) {
+		r.log.Warn("The approval is not found.", zap.Error(err))
+		gb.ErrorResponse(c, http.StatusNotFound, "The apporval is not found.")
+		return
+	} else if err != nil {
+		r.log.Error("It has failed to get the approval.", zap.Error(err))
+		gb.ErrorResponse(c, http.StatusInternalServerError, "It has failed to get the approval.")
+		return
+	}
+
+	if err := r.i.DeleteApproval(ctx, ap); err != nil {
+		r.log.Error("It has failed to delete the approval.", zap.Error(err))
+		gb.ErrorResponse(c, http.StatusInternalServerError, "It has failed to delete the approval.")
+		return
+	}
+
+	c.Status(http.StatusOK)
 }
